--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,3 +204,13 @@ footer {
     margin-top: -20px;
   }
 }
+.reveal {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 0.5s ease;
+}
+
+.reveal.visible {
+  opacity: 1;
+  transform: translateY(0);
+   }
